--- a/css/styles.css
+++ b/css/styles.css
@@ -2,26 +2,33 @@
     text-align: center;
 }
 
-img {
-    width: 100%;
-}
-
 header {
     margin-left: 10%;
     margin-right: 10%;
 }
 main {
-    margin:20px 10% 0 10%;
+    margin: auto;
+    max-width: 1000px;
+    margin-top: 20px;
     display: grid;
-    grid-template-columns: repeat( 4, 1fr );
-    grid-template-rows: repeat(3,1fr);
-    column-gap: 20px;
-    row-gap: 20px;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    gap: 20px;
 }
 
 #search {
    padding: 10px 7em;
+   background-color: lightgrey;
+   border: grey 5px;
+   border-radius: 5px;
 }
+
+::placeholder {
+    color: black;
+}
+
+
+
+
 
 
 
